testdata/baselines/reference/submodule/conformance/ES5For-of16.errors.txt
ES5For-of16.ts(5,9): error TS18048: 'v' is possibly 'undefined'.


==== ES5For-of16.ts (1 errors) ====
    for (let v of []) {
        v;
        for (let v of []) {
            var x = v;
            v++;
            ~
!!! error TS18048: 'v' is possibly 'undefined'.
        }
    }